--- a/index.html
+++ b/index.html
@@ -4,11 +4,44 @@
 	<head>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/default.css">
+		<script src="https://use.typekit.net/doq1sko.js"></script>
+		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 		<title>GamePad</title>
 	</head>
 	<body>
 		<header>
-		<h1>Find new friends to play retro games.</h1>
+			<img id=logo src="assets/logo.png" alt="logo" width="586" height="586">
+			<h1>Find new friends to play retro games.</h1>
+			<img src="assets/title-black.png" alt="title-black" width="640" height="1296">
+			<img src="assets/aaslogo.png" alt="aaslogo" width="509" height="166">
 		</header>
+		<section>
+			<div>
+				<img src="assets/profile.png" alt="profile" width="383" height="776">
+				<h2>Simple Profiles</h2>
+				<p>This is not Facebook, no need to post your life story. If you need validation find a partner or go to a shrink.</p>
+			</div>
+			<div>
+				<img src="assets/personality%20filter.png" alt="personality%20filter" width="383" height="776">
+				<h2>Personality Filter</h2>
+				<p>Don’t want to hear about someone’s politics or maybe you do. Either way we have you covered! Our personality filter lets you search based on interest, chat topics, likes and dislikes.
+				</p>
+			</div>
+			<div>
+				<img src="assets/game-search.png" alt="game-search" width="383" height="776">
+				<h2>Game Search</h2>
+				<p>Quickly search for a specific game or browse by genre.</p>
+			</div>
+			<div>
+				<img src="assets/game-connect.png" alt="game-connect" width="383" height="776">
+				<h2>Auto Game Connect</h2>
+				<p>Don’t know how to connect with a friend to play a game? We’ve got you covered, with Auto game Connect a secure connection is made between your games.</p>
+			</div>
+		</section>
+		<footer>
+			<img src="assets/color-seperator.png" alt="color-seperator" width="2880" height="50">
+			Download Now and Start Connecting
+			<img src="assets/aaslogo.png" alt="aaslogo" width="509" height="166">
+		</footer>
 	</body>
 </html>
