--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="https://use.typekit.net/doq1sko.css">
 		<link rel="stylesheet" href="css/default.css">
-		<script src="https://use.typekit.net/doq1sko.js"></script>
-		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 		<title>GamePad</title>
 	</head>
 	<body>
 		<header>
-			<img id=logo src="assets/logo.png" alt="logo" width="586" height="586">
+			<div id="rainbow">
+			</div>
 			<h1>Find new friends to play retro games.</h1>
-			<img src="assets/title-black.png" alt="title-black" width="640" height="1296">
-			<img src="assets/aaslogo.png" alt="aaslogo" width="509" height="166">
 		</header>
 		<section>
 			<div>
@@ -39,7 +37,7 @@
 			</div>
 		</section>
 		<footer>
-			<img src="assets/color-seperator.png" alt="color-seperator" width="2880" height="50">
+<!-- 			<img src="assets/color-seperator.png" alt="color-seperator" width="2880" height="50"> -->
 			Download Now and Start Connecting
 			<img src="assets/aaslogo.png" alt="aaslogo" width="509" height="166">
 		</footer>
