--- a/index.html
+++ b/index.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
-
 <html>
 	<head>
+<!--css reset-->
 		<link rel="stylesheet" href="css/reset.css">
+<!--type kit-->
 		<link rel="stylesheet" href="https://use.typekit.net/doq1sko.css">
+<!--google font-->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		
+		
 		<link rel="stylesheet" href="css/default.css">
+		
 		<title>GamePad</title>
+		
 	</head>
-	<body>
+	<body>		
 		<header>
-			<div id="rainbow">
-			</div>
-			<h1>Find new friends to play retro games.</h1>
+				<img id="banner" src="assets/header-banner.png" alt="banner" />
+				<img id="woodbkgnd" src="assets/wood.jpg" alt="woodtexture" />
+ 					<div id="phrase"> 
+						<h1>Find new friends</h1>
+						<h1>to play retro games.</h1>
+					<img id="splash" src="assets/title.png" alt="title" width="494" height="1000">
+				</div>
 		</header>
+		
 		<section>
-			<div>
-				<img src="assets/profile.png" alt="profile" width="383" height="776">
-				<h2>Simple Profiles</h2>
-				<p>This is not Facebook, no need to post your life story. If you need validation find a partner or go to a shrink.</p>
+			<div class="fwhite">
+				<img src="assets/simple-profile.png" alt="Simple Profile" />
+				<div class="fmover">
+					<h2>Simple Profiles</h2>
+					<p>This is not Facebook, no need to post your life story. If you need validation find a partner or go to a shrink.</p>
+				</div>
+			
 			</div>
-			<div>
-				<img src="assets/personality%20filter.png" alt="personality%20filter" width="383" height="776">
-				<h2>Personality Filter</h2>
-				<p>Don’t want to hear about someone’s politics or maybe you do. Either way we have you covered! Our personality filter lets you search based on interest, chat topics, likes and dislikes.
-				</p>
+			
+			<div class="fwood">
+				<img src="assets/personality-filter.png" alt="Profile Search" />
+				<div class="fmover">
+					<h2>Personality Filter</h2>
+					<p>Don’t want to hear about someone’s politics or maybe you do. Either way we have you covered! Our personality filter lets you search based on interest, chat topics, likes and dislikes.
+					</p>
+				</div>
 			</div>
-			<div>
-				<img src="assets/game-search.png" alt="game-search" width="383" height="776">
+			
+			<div class="fwhite">
+				<img src="assets/game-search.png" alt="Game Search" />
+				<div class="fmover">				
 				<h2>Game Search</h2>
 				<p>Quickly search for a specific game or browse by genre.</p>
+				</div>
 			</div>
-			<div>
-				<img src="assets/game-connect.png" alt="game-connect" width="383" height="776">
+			
+			<div class="fwood">
+				<img src="assets/auto-game-connect.png" alt="Auto Game Connect" />
+				<div class="fmover">				
 				<h2>Auto Game Connect</h2>
 				<p>Don’t know how to connect with a friend to play a game? We’ve got you covered, with Auto game Connect a secure connection is made between your games.</p>
+				</div>
 			</div>
 		</section>
 		<footer>
-<!-- 			<img src="assets/color-seperator.png" alt="color-seperator" width="2880" height="50"> -->
-			Download Now and Start Connecting
-			<img src="assets/aaslogo.png" alt="aaslogo" width="509" height="166">
+			<img id="rbseperator" src="assets/smallrainbowbar.png" alt="rainbow seperator" />
+			<p>Download Now and Start Connecting</p>
+			<img id="download" src="assets/appstorelogo.png" alt="app store" />
 		</footer>
 	</body>
 </html>
